IK: notFound page style fix on mobiles

--- a/components/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/components/pages/NotFoundPage/NotFoundPage.module.scss
@@ -1,3 +1,5 @@
+@import "../../../css/common.scss";
+
 .Container {
   display: flex;
   align-items: center;
@@ -34,3 +36,38 @@
     }
   }
 }
+
+@media only screen and (min-width: $desktopWide) {
+
+}
+
+@media only screen and (min-width: $tabletLandscapeMin) and (max-width: $tabletLandscapeMax) {
+
+}
+
+@media only screen and (min-width: $tabletPortraitMin) and (max-width: $tabletPortraitMax) {
+
+}
+
+@media only screen and (max-width: $mobile) {
+  .Container {
+    height: 100%;
+
+    .Head{
+      text-align: center;
+      font-size: 30px;
+      line-height: 40px;
+    }
+
+    .Subhead {
+      text-align: center;
+    }
+
+    .Subhead, a {
+      font-size: 14px;
+      line-height: 22px;
+    }
+  }
+}
+
+
